# FlowArk-Artifact

./: .gitignore  README.md  eval_main.py  main.py  pyproject.toml  run_flowark_artifact.sh
benchmark_builder/: __init__.py  config.py  config.yaml  export.py  inventory.py  io.py  manifest.py  rule_metadata.py  rules.py  schemas.py
data/: evaluation-archives-manifest.csv  evaluation-archives-sha256.txt  manual-audit-archives-manifest.csv  manual-audit-archives-sha256.txt  source-archives-manifest.csv  source-archives-sha256.txt
data/benchmarks/: source-first-v3.2-strat15.template.json
data/workloads/: 260618-source-first-v3.2-top50-source-count-distribution.md  260622-source-first-v3.2-15apps.md
docs/: release-assets.md
flowark/: __init__.py  anthropic_capture.py  anthropic_env.py  backend_transport.py  git_snapshot.py  knowledge_packaging.py  mem0_metering.py  openai_compat.py  process_tree.py  prompt_loader.py  reporting.py  state_paths.py  system_prompt.py  timeutil.py  types.py
flowark/adapters/: __init__.py  base.py  registry.py
flowark/agent/: __init__.py  agents.py
flowark/config/: __init__.py  capture_proxy.yaml  eval.yaml  loader.py  runtime.yaml
flowark/eval/: __init__.py
flowark/knowledge/: __init__.py  analysis_log_rag.py  artifact_audit.py  content_utils.py  embedding_router.py  manager.py  packaging.py  pipeline.py  reuse_digest.py  reuse_profile.py  router.py  (+5 more)
flowark_studio/: __init__.py  __main__.py  server.py
scripts/: build_public_benchmarks.py  fetch_artifact_data.py  pack_eval_release_assets.py  run_artifact.py  start_studio.py
(+93 files in other folders)
